# centicom

./: .gitignore  CMakeLists.txt  README.md
inc/: Centicom.hpp  Connection.hpp  Curses.hpp
src/: Centicom.cpp  Connection.cpp  Curses.cpp  main.cpp
